sgd/reproduction/playground/objects/AccountPlan__c.object
<CustomObject>
    <fields>
        <fullName>OrdersReceived2020__c</fullName>
        <label>受注実績(2020)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrdersReceived2021__c</fullName>
        <label>受注実績(2021)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrdersReceived2022__c</fullName>
        <label>受注実績(2022)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetAmount2020__c</fullName>
        <label>目標金額(2020)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetAmount2021__c</fullName>
        <label>目標金額(2021)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetAmount2022__c</fullName>
        <label>目標金額(2022)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetShare2020__c</fullName>
        <label>目標シェア(2020)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TargetShare2023__c</fullName>
        <label>目標シェア(2023)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TargetYear__c</fullName>
        <label>作成日</label>
        <type>Date</type>
    </fields>
    <label>アカウントプラン</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>アカウントプラン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <pluralLabel>アカウントプラン</pluralLabel>      
</CustomObject>